# Ref. https://github.com/DataLabTechTV/datalab/blob/main/pyproject.toml

[project]
name = "pjpylib"
version = "0.1.2"
description = "PJs Python Library."
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
  "python-semantic-release>=9.21.1",
]

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
tag_format = "{version}"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
