[metadata]
name = pjPyLib
description = Pjs Python Library.
long_description = file: README.md, ChangeLog
author = Philip Juluian
author_email = pjulian@gmail.com
maintainer = Philip Juluian
maintainer_email = pjulian@gmail.com
url = https://github.com/pjulian/pjPyLib
keywords = pjPyLib
classifiers =
    License :: N/A :: N/A
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.8
install_requires =
    # publiclib==1.0.0
    # privatelib@git+ssh://git@github.com/<username>/PrivateLib#egg=PrivateLib
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[tool:wheel]
universal = 1

[flake8]
exclude =
    venv,
    .tox,
    .git,
    __pycache__,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
max-line-length = 80

[tox:tox]
envlist = unittest,lint

[testenv]
deps =
    ipython
    pylint
    pytest
    pytest-cov
    pytest-xdist
    flake8
    flake8-docstrings

[testenv:unittest]
commands=
    pytest -v -s -n auto -l --cov=pjpylib --cov-report term-missing --cov-report xml --no-cov-on-fail tests/unit
setenv =
    TESTING = True

[testenv:lint]
commands=
    flake8 src/pjpylib
    flake8 tests/unit
    pylint src/pjpylib
    pylint tests/unit
